[Refactor] 리뷰 피드백 반영
- 쿼리 내 주석 제거
- `.collect(Collectors.toList());` `.toList();`로 간략화
- memberId로 조회한다는 점을 나타내기 위해 메서드명 `findByMemberIdAndCursor`로 변경